// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`getDefaultConfigForPlatform > should return the correct default config for platform belgie 1`] = `
{
  "allowDeliveryOptions": true,
  "allowEveningDelivery": true,
  "allowMondayDelivery": true,
  "allowMorningDelivery": true,
  "allowOnlyRecipient": true,
  "allowPackageTypeDigitalStamp": undefined,
  "allowPackageTypeMailbox": undefined,
  "allowPickupLocations": true,
  "allowSameDayDelivery": true,
  "allowSaturdayDelivery": undefined,
  "allowSignature": true,
  "allowStandardDelivery": true,
  "apiBaseUrl": "https://api.myparcel.nl",
  "carrierSettings": {},
  "currency": "EUR",
  "deliveryDaysWindow": 7,
  "dropOffDelay": 1,
  "dropOffPossibilities": undefined,
  "locale": "nl",
  "packageType": "package",
  "pickupLocationsDefaultView": "list",
  "pickupLocationsMapTileLayerData": "{"url":"https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png","attribution":"&copy; <a href=\\"https://www.openstreetmap.org/copyright\\">OpenStreetMap</a> contributors, Tiles style by <a href=\\"https://www.hotosm.org/\\" target=\\"_blank\\">Humanitarian OpenStreetMap Team</a> hosted by <a href=\\"https://openstreetmap.fr/\\" target=\\"_blank\\">OpenStreetMap France</a>","maxZoom":19}",
  "pickupShowDistance": false,
  "platform": "myparcel",
  "priceEveningDelivery": undefined,
  "priceMondayDelivery": undefined,
  "priceMorningDelivery": undefined,
  "priceOnlyRecipient": undefined,
  "pricePackageTypeDigitalStamp": undefined,
  "pricePackageTypeMailbox": undefined,
  "pricePickup": undefined,
  "priceSameDayDelivery": undefined,
  "priceSaturdayDelivery": undefined,
  "priceSignature": undefined,
  "priceStandardDelivery": undefined,
  "showDeliveryDate": true,
  "showPriceSurcharge": false,
  "showPrices": true,
}
`;

exports[`getDefaultConfigForPlatform > should return the correct default config for platform myparcel 1`] = `
{
  "allowDeliveryOptions": true,
  "allowEveningDelivery": true,
  "allowMondayDelivery": true,
  "allowMorningDelivery": true,
  "allowOnlyRecipient": true,
  "allowPackageTypeDigitalStamp": undefined,
  "allowPackageTypeMailbox": undefined,
  "allowPickupLocations": true,
  "allowSameDayDelivery": true,
  "allowSaturdayDelivery": undefined,
  "allowSignature": true,
  "allowStandardDelivery": true,
  "apiBaseUrl": "https://api.myparcel.nl",
  "carrierSettings": {},
  "currency": "EUR",
  "deliveryDaysWindow": 7,
  "dropOffDelay": 1,
  "dropOffPossibilities": undefined,
  "locale": "nl",
  "packageType": "package",
  "pickupLocationsDefaultView": "map",
  "pickupLocationsMapTileLayerData": "{"url":"https://{s}.tile.openstreetmap.fr/hot/{z}/{x}/{y}.png","attribution":"&copy; <a href=\\"https://www.openstreetmap.org/copyright\\">OpenStreetMap</a> contributors, Tiles style by <a href=\\"https://www.hotosm.org/\\" target=\\"_blank\\">Humanitarian OpenStreetMap Team</a> hosted by <a href=\\"https://openstreetmap.fr/\\" target=\\"_blank\\">OpenStreetMap France</a>","maxZoom":19}",
  "pickupShowDistance": true,
  "platform": "myparcel",
  "priceEveningDelivery": undefined,
  "priceMondayDelivery": undefined,
  "priceMorningDelivery": undefined,
  "priceOnlyRecipient": undefined,
  "pricePackageTypeDigitalStamp": undefined,
  "pricePackageTypeMailbox": undefined,
  "pricePickup": undefined,
  "priceSameDayDelivery": undefined,
  "priceSaturdayDelivery": undefined,
  "priceSignature": undefined,
  "priceStandardDelivery": undefined,
  "showDeliveryDate": true,
  "showPriceSurcharge": false,
  "showPrices": true,
}
`;
